--- a/index.html
+++ b/index.html
@@ -9,181 +9,240 @@
 <body>
     <div class="card-grid">
         <div class="empty-card">
-            <img src="imagenes/14Dokkan.webp" alt="Androide 14">
+            <img src="imagenes/14Dokkan.webp" alt="">
+            <h3>Dokkan</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/15Dokkan.webp" alt="Androide 14">
+            <img src="imagenes/15Dokkan.webp" alt="">
+            <h3>Dokkan</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/17_Artwork.webp" alt="Androide 14">
+            <img src="imagenes/17_Artwork.webp" alt="">
+            <h3>Artwork</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Android19.webp" alt="Androide 14">
+            <img src="imagenes/Android19.webp" alt="">
+            <h3>Androide 19</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Androide13normal.webp" alt="Androide 14">
+            <img src="imagenes/Androide13normal.webp" alt="">
+            <h3>Androide 13</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Androide_16.webp" alt="Androide 14">
+            <img src="imagenes/Androide_16.webp" alt="">
+            <h3>Androide 16</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Androide_18_Artwork.webp" alt="Androide 14">
+            <img src="imagenes/Androide_18_Artwork.webp" alt="">
+            <h3>Androide 18</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Arte_de_Dende_en_Super_Hero.webp" alt="Androide 14">
+            <img src="imagenes/Arte_de_Dende_en_Super_Hero.webp" alt="">
+            <h3>Dende</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Babidi_Artwork.webp" alt="Androide 14">
+            <img src="imagenes/Babidi_Artwork.webp" alt="">
+            <h3>Babidi</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Bardock_Artwork.webp" alt="Androide 14">
+            <img src="imagenes/Bardock_Artwork.webp" alt="">
+            <h3>Bardock</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/Beerus_DBS_Broly_Artwork.webp" alt="Androide 14">
+            <img src="imagenes/Beerus_DBS_Broly_Artwork.webp" alt="">
+            <h3>Beerus</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/bulma.webp" alt="Androide 14">
+            <img src="imagenes/bulma.webp" alt="">
+            <h3>bulma</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/BuuGordo_Universo7.webp" alt="Androide 14">
+            <img src="imagenes/BuuGordo_Universo7.webp" alt="">
+            <h3>Buugordo</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/celula.webp" alt="Androide 14">
+            <img src="imagenes/celula.webp" alt="">
+            <h3>celula</h3>
         </div>
         <div class="empty-card">
-            <img src="imagenes/ChiChi_DBS.webp" alt="Androide 14">
+            <img src="imagenes/ChiChi_DBS.webp" alt="">
+            <h3>chichi</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Dende_Artwork.webp" alt="Androide 14">
+            <h3>artwork</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Dispo_render.webp" alt="Androide 14">
+            <h3>Dispo</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/dodoria.webp" alt="Androide 14">
+            <h3>dodoria</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Dr._Gero_nadroide_20.webp" alt="Androide 14">
+            <h3>Dr Gero</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Final_Yamcha.webp" alt="Androide 14">
+            <h3>Yamcha</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Freezer.webp" alt="Androide 14">
+            <h3>Freezer</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/ginyu.webp" alt="Androide 14">
+            <h3>ginyu</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/ginyu_force.webp" alt="Androide 14">
+            <h3>force</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/gohan.webp" alt="Androide 14">
+            <h3>gohan</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/goku_normal.webp" alt="Androide 14">
+            <h3>goku</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Gotenks_Artwork.webp" alt="Androide 14">
+            <h3>gotenks</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Gran_Kaio-shin_Artwork.webp" alt="Androide 14">
-        </div>
-        <div class="empty-card">
-            <img src="imagenes/Gran_Kaio-shin_Artwork.webp" alt="Androide 14">
+            <h3>kaio-shin</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Gran_kaio_sama12.webp" alt="Androide 14">
+            <h3>Gran kaio</h3>
+        </div>
+        <div class="empty-card">
+            <img src="imagenes/Beerus_DBS_Broly_Artwork.webp" alt="Androide 14">
+            <h3>beerus</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Grand_priest.webp" alt="Androide 14">
+            <h3>Grand</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Jiren.webp" alt="Androide 14">
+            <h3>jiren</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/kaio-shin_del_este.webp" alt="Androide 14">
+            <h3>kaio</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio-shin_del_este_Artwork.webp" alt="Androide 14">
+            <h3>kaio shin</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio-shin_del_norte.webp" alt="Androide 14">
+            <h3>kaio del norte</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio-shin_del_Oeste_Dokkan.webp" alt="Androide 14">
+            <h3>kaio del oeste</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio-shin_del_Sur_Dokkan.webp" alt="Androide 14">
+            <h3>kaio del sur</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/kaio_del_este.webp" alt="Androide 14">
+            <h3>kaoi del este</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio_del_Norte.webp" alt="Androide 14">
+            <h3>kaio del norte</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio_del_oeste.webp" alt="Androide 14">
+            <h3>kaio del oeste</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kaio_del_sur_cuerpo_completo.webp" alt="Androide 14">
+            <h3>kaio del sur</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kibito_Artwork.webp" alt="Androide 14">
+            <h3>kibito</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Kibito_shin_Artwork.webp" alt="Androide 14">
+            <h3>kiibito</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Krilin_Universo7.webp" alt="Androide 14">
+            <h3>krilin</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Lunch_traje_de_sirvienta_en_el_manga.webp" alt="Androide 14">
+            <h3>lunch</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Marcarita.webp" alt="Androide 14">
+            <h3>marcarita</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Mr_Satan_DBSuper.webp" alt="Androide 14">
+            <h3>mr satan</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Nail_Artwork.webp" alt="Androide 14">
+            <h3>nail</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/picolo_normal.webp" alt="Androide 14">
+            <h3>picolo</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Raditz_artwork_Dokkan.webp" alt="Androide 14">
+            <h3>raditz</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/roshi.webp" alt="Androide 14">
+            <h3>roshi</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Shin_en_Bucchigiri_Match.webp" alt="">
+            <h3>shin</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Tenshinhan_Universo7.webp" alt="">
+            <h3>tenshinhan</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Toppo.webp" alt="">
+            <h3>toppo</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Trunks_Buu_Artwork.webp" alt="">
+            <h3>trunks</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/vegeta_normal.webp" alt="">
+            <h3>vegeta</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Vermoud.webp" alt="">
+            <h3>vermoud</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Whis_DBS_Broly_Artwork.webp" alt="">
+            <h3>whis</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/zarbon.webp" alt="">
+            <h3>zarbon</h3>
         </div>
         <div class="empty-card">
             <img src="imagenes/Zeno_Artwork.webp" alt="">
+            <h3>zeno</h3>
         </div>
 
     </div>
